# CG_assignments

./: .gitignore
OpenGL_1/: README
OpenGL_1/Code/: OpenGL_transformations.pro  OpenGL_transformations.pro.user.9be0e67  colors.h  geoms.cpp  geoms.h  mainview.cpp  mainview.h  transform.cpp  transform.h
OpenGL_1/build-OpenGL_transformations-Desktop-Debug/: Makefile  OpenGL_transformations
OpenGL_1/build-OpenGL_transformations-Desktop_Qt_5_10_1_MSVC2015_64bit-Debug/: Makefile.Debug  Makefile.Release
OpenGL_2/Code/: buildGeoms.h  mainview.cpp  mainview.h  solid_mesh.cpp  solid_mesh.h  transform.cpp  transform.h
OpenGL_2/build-OpenGL_transformations-Desktop-Debug/: Makefile
OpenGL_2_working/: README
OpenGL_2_working/Code/: OpenGL_transformations.pro  geoms.cpp  geoms.h  mainview.cpp  mainview.h  mainwindow.ui  model.cpp  shaderwrapper.cpp  shaderwrapper.h  solid_mesh.cpp  solid_mesh.h
OpenGL_3/: README
Raytracer_1/: CMakeLists.txt  README.md
Raytracer_2/: CMakeLists.txt  README.md
Raytracer_2/Code/: material.cpp  material.h  object.cpp  object.h  raytracer.cpp  scene.cpp  scene.h  triple.cpp  triple.h
Raytracer_2/Code/shapes/: cone.cpp  cone.h  cylinder.cpp  cylinder.h  mesh.cpp  plane.h  sphere.cpp  sphere.h
Raytracer_2/Scenes/: scene01-lights-shadows.json  scene01-texture-ss-reflect-lights-shadows.json  scene04.json  test.json
Raytracer_2/Screenshots/: scene01-bluegrid-shiny-ss-reflect-light-shadows  scene01-bluegrid-ss-reflect-light-shadows  scene01-earth-ss-reflect-light-shadows
raytracerframework_cpp(3)/: CMakeLists.txt
(+84 files in other folders)
